2004-11-02  Leif Hedstrom  <leif@ogre.com>

	* API.xs (internal_sortcmp_proc): Added support for Perl sort functions.
	(ldap_multi_sort_entries): Ditto.
	(ldap_sort_entries): Ditto.

	* Conn.pm: Cleaned up NSPR code, fixed some bugs.
	(search): Added support for sortattrs, using multisort.
	(search): Fixed parsing of the attrs.
	(setOption): Set an "arbitrary" option.
	(getOption): Getter.
	(setSizelimit): Set the sizelimit.
	(getSizelimit): Getter.
	(init): Added the callback, this has at least the potential of making
	it possible to parse some server controls as returned by the
	asyncronous bind.
	(setOption): Added support for hash style arguments.

2004-10-28  Leif Hedstrom  <leif@ogre.com>

	* Entry.pm (attrModified): Removed some dead code.

	* Conn.pm (add): Fixed so we don't try to add attributes that have been
	deleted (From Donaldo).

2004-10-19  Leif Hedstrom  <leif@ogre.com>

	* Conn.pm (new): Add NSPR option.
	(installNSPR): Try to fix the problem by rebinding if this is called.
	(installNSPR): Now works as a class (static) method.

2004-10-17  Leif Hedstrom  <leif@ogre.com>

	* Conn.pm (close): Removed $ret, it was always 1 anyways.

	* Entry.pm (move): Added support for hash-style arguments.
	(copy): Added support for hash-style arguments.
	(removeValue): Added support for hash-style arguments, cleaned up some
	local variable statements.
	(removeDNValue): Added support for hash-style arguments.
	(addValue): Added support for hash-style arguments.
	(addDNValue): Added support for hash-style arguments
	(getValues): Cleaned up arguments.
	(hasValue): Added support for hash-style arguments.
	(hasValue): Make sure to lower-case the attribute, this was a bug.
	(hasDNValue): Support hash-style arguments.
	(matchValue): Support hash-style arguments.
	(matchDNValue): Support hash-style arguments.
	(setDN): Support hash-style arguments.

2004-10-15  Leif Hedstrom  <leif@ogre.com>

	* API.xs (prldap_set_session_option): New function to set the IO