@@ -1,3 +1,12 @@
+2004-12-28  Leif Hedstrom  <leif@ogre.com>
+
+	* Conn.pm (new): Added the entryclass argument.
+	(newEntry): Honor the new entryclass setting.
+	(nextEntry): Ditto.
+	(delete): Changed to check if the provided entry is proper
+	Mozilla::LDAP::Entry (or subclass) type.
+	(add): Ditto.
+
 2004-11-02  Leif Hedstrom  <leif@ogre.com>
 
 	* API.xs (internal_sortcmp_proc): Added support for Perl sort functions.
